Adding login to the app.

--- a/securing-angular-client/src/app/app.component.html
+++ b/securing-angular-client/src/app/app.component.html
@@ -10,6 +10,7 @@
             <button mat-button routerLink="/admin">Manage Projects</button>
         </span>
         <span>
+            <button mat-button (click)="login()">Login</button>
         </span>
     </mat-toolbar>
 </nav>
