--- a/securing-angular-client/src/app/home/home.component.html
+++ b/securing-angular-client/src/app/home/home.component.html
@@ -1,1 +1,1 @@
-<div class="mat-display-1" style="text-align: center;">Welcome to Globomantics awesome project management app! Use 'admin@globomantics.com/Test123!!!' to test the login/logout</div>
+<div class="mat-display-1" style="text-align: center;">Using hosted IdentityServer4! Use 'admin@globomantics.com/Test123!!!' to test the login/logout</div>
